# 07_Document_Level_OCR

./: .dockerignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  requirements_colab.txt
.github/workflows/: ci.yml
Report and Slides/: Report.tex  Slides.tex
app/: gradio_app.py
configs/: infer.yaml  train.yaml
data/: README.md
deploy/: README_HF_SPACE.md
docs/: DESIGN_BRIEF.md  agent_architecture.md  architecture.md  continual_learning_monitoring.md  data_card.md  data_description.md  deployment.md  ethics_statement.md  evaluation.md  model_card.md  model_selection.md  privacy_robustness.md  problem_definition.md  project_plan.md  slide_deck_outline.md
models/: README.md
notebooks/: COLAB_GUIDE.md  DocOCR_Colab_Training_H100_AUTOPILOT.ipynb
sample_data/: sample_doc.txt
scripts/: quickstart.sh  train_colab.sh
src/dococr/: __init__.py  cli.py  config.py  logging_utils.py
src/dococr/agent/: __init__.py  doc_agent.py  llm_orchestrator.py  policy.py  state.py  tools.py
src/dococr/analysis/: __init__.py  error_analysis.py  latency.py  robustness.py
src/dococr/api/: app_combined.py  dependencies.py  main.py  schemas.py  ui.py
src/dococr/automation/: autopilot.py
src/dococr/autoreport/: artifact_loader.py  charts.py  report_pdf.py  slides_pptx.py
src/dococr/data/: __init__.py  corpus.py  dataset.py  download_dataset.py  ocr_noise.py  samples.py
src/dococr/grading/: checklist.py
src/dococr/models/: __init__.py  baseline.py  corrector.py  model_registry.py  ocr_engine.py  text_utils.py
src/dococr/monitoring/: __init__.py  drift_report.py
src/dococr/ocr/: __init__.py  layout.py  preprocess.py
src/dococr/training/: __init__.py  evaluate.py  metrics.py  train_corrector.py  tune.py
tests/: conftest.py  test_agent_pipeline.py  test_analysis_grade.py  test_layout_preprocess.py  test_noise_metrics.py
